# GenericParameters

./: CMakeLists.txt  Changelog.txt  Doxyfile  LICENSE  README.md
CMake/: Common.cmake
GenericParameters/: CMakeLists.txt  EnumParameter.h  FunctionParameter.h  NumericParameter.h  Parameter.h  ParameterObject.h  VectorParameter.h
Tests/: CMakeLists.txt  ParameterTest.cpp  TestParameterObject.cpp  TestParameterObject.h
